# CamPing

./: README.md  requirements.txt  setup.cfg
src/camping/: __init__.py  camping.py
