[metadata]
name = camping
version = attr: camping.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Ping security cameras and ping healthchecks.io with results.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/camping
keywords = healthchecks,Amcrest,HIKVision,security camera
license = GPLv3
classifiers = 
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    build==1.2.2.post1
    certifi==2025.1.31
    charset-normalizer==3.4.1
    colorama==0.4.6
    idna==3.10
    packaging==24.2
    platformdirs==4.3.6
    pyproject_hooks==1.2.0
    requests==2.32.3
    tcppinglib==2.0.4
    urllib3==2.3.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    camping = camping.camping:main
 