[metadata]
name = camping
version = attr: camping.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Check Blue Iris security camera status and ping healthchecks.io with results.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/camping
keywords = Blue Iris,healthchecks,security camera
license = GPL-3.0-or-later
classifiers = 
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    aiohappyeyeballs>=2.6.1
    aiohttp>=3.11.16
    aiosignal>=1.3.2
    attrs>=25.3.0
    build>=1.2.2.post1
    certifi>=2025.1.31
    charset-normalizer>=3.4.1
    colorama>=0.4.6
    frozenlist>=1.6.0
    idna>=3.10
    jaraco.classes>=3.4.0
    jaraco.context>=6.0.1
    jaraco.functools>=4.1.0
    keyring>=25.6.0
    more-itertools>=10.6.0
    multidict>=6.4.3
    packaging>=24.2
    platformdirs>=4.3.6
    propcache>=0.3.1
    pyblueiris>=0.2.11
    pyproject_hooks>=1.2.0
    pywin32-ctypes>=0.2.3
    requests>=2.32.3
    urllib3>=2.3.0
    yarl>=1.20.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    camping = camping.camping:cli
